--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google/genai": "^1.34.0",
     "@google/generative-ai": "^0.24.1",
     "lucide-react": "^0.503.0",
-    "next": "15.3.8",
+    "next": "^15.5.9",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
